InnerApi/K8s-files/App/innerapideployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: innerapi-deployment
  labels:
    app: innerapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: innerapi
  template:
    metadata:
      labels:
        app: innerapi
    spec:
      serviceAccount: god
      serviceAccountName: god
      containers:
      - name: innerapi-container
        image: sadiksa/innerapi:$(Build.BuildNumber)
        ports:
        - containerPort: 8080
