InnerApi/K8s-files/App/innerapisvc.yml
apiVersion: v1
kind: Service
metadata:
  name: innerapi-service
  namespace: innerapi
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: innerapi
  type: ClusterIP
